# CCVS

./: .gitignore  CLI_class.py  GUI_class.py  Instructions (READ_ME).md  Makefile  README.md  Untitled Diagram.drawio  Votes_README.md  add_cron_job.sh  board_and_pieces.py  chess_python_installer.sh  game_state.json  install_chess_cmd.sh  pyproject.toml  remove_cron_job.sh  requirements.txt  setup.py  team_management.py  test.py  uninstal_chess_cmd.sh  vote_manager.py
data/: game_state.json  test.txt
docs/: Analysis Doc.docx  Design Document.docx  NotesAndLinks.txt  Platform Information.docx  functions_summaries.txt  tasks.md  tasks.txt
example/: the_git_calls.py
laween/: test_suite.py
src/: .vote.py.swp  CLI_class.py  Tracker.py  __init__.py  board_display.py  chess.py  config.py  cron.py  data_persistence.py  game.py  github_integration.py  main.py  player_install.sh  scheduler.py  team_managment.py  vote.py  web_main.py
src/CCVS.egg-info/: PKG-INFO  SOURCES.txt
src/static/: votes.txt
src/templates/: chess.html  index.html
tests/: conftest.py  test_commit.py  test_save_state.py  test_scheduler.py
website/: flasktest.py  web_main.py
website/templates/: chess.html  index.html
