[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "CCVS"
version = "0.1"
description = ""
readme = ""
requires-python = ">=3.7"
license = { text = "MIT" }  # Replace with your license if different
authors = [
  { name = "Your Name", email = "you@example.com" }  # Optional
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
